--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html lang="pt-br" translate="no">
     <head>
-        <title>Dank-Code</title>
+        <title>Danki-Code</title>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width" initial-scale="1.0" maximun-scale="1.0">
         <meta name="author" content="Pedro Telles">
