--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
             <div class="center-1">
                 <div id="header-top">
                     <img src="imagens/logo.png" title="Logo Dank-Code" alt="Logo Dank-Code">
-                    <span onclick="clickMenu" class="material-icons">menu</span>
+                    <span class="material-icons">menu</span>
                     <ul id="imenu">
                         <li><a title="Ir para página inicial" target="self" rel="next" href="#">home</a></li>
                         <li><a title="Ir para informações de serviços" target="self" rel="next" href="#">serviços</a></li>
@@ -116,34 +116,5 @@
                 <small id="footer-right">Feito por pessoas e para pessoas.</small>
             </div>
         </footer>
-        <!-----
-        <script>
-            function clickMenu(){
-                if (imenu.style.display == 'none'){
-                    imenu.style.display = 'block'
-                } else{
-                    imenu.style.display = 'none'
-                }
-            }
-        </script>
-
-        <script>
-            function mudouTamanho(){
-                if (window.innerWidth >= 700){
-                    imenu.style.display = 'block'
-                } else{
-                    imenu.style.display = 'none'
-                }
-            }
-
-            function clickMenu(){
-                if (imenu.style.display == 'none'){
-                    imenu.style.display = 'block'
-                } else{
-                    imenu.style.display = 'none'
-                }
-            } 
-        </script>
-        -->
     </body>
 </html>
